--- a/Editor/pom.xml
+++ b/Editor/pom.xml
@@ -36,6 +36,10 @@
     <artifactId>org-netbeans-api-visual</artifactId>
     <version>RELEASE74</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.eclipse.persistence</groupId>
+      <artifactId>eclipselink</artifactId>
+      <version>2.5.1</version>
+    </dependency>
   </dependencies>
 </project>
