--- a/Editor/src/main/resources/editor/Bundle.properties
+++ b/Editor/src/main/resources/editor/Bundle.properties
@@ -1,2 +1,4 @@
 
 MainFrame.tablesSearchField.text=Hledej...
+MainFrame.jPanel2.border.title=Nastroje
+MainFrame.tablesListArea.border.title=Dostupne tabulky
