--- a/Editor/pom.xml
+++ b/Editor/pom.xml
@@ -41,5 +41,40 @@
       <artifactId>eclipselink</artifactId>
       <version>2.5.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.jdesktop</groupId>
+      <artifactId>beansbinding</artifactId>
+      <version>1.2.1</version>
+    </dependency>
   </dependencies>
+  
+  
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.4</version>
+       <configuration>
+           <descriptorRefs>
+               <descriptorRef>jar-with-dependencies</descriptorRef>
+           </descriptorRefs>
+           <archive>
+               <manifest>
+                   <mainClass>editor.MainFrame</mainClass>
+               </manifest>
+           </archive>
+       </configuration>
+       <executions>
+           <execution>
+               <id>make-assembly</id>
+               <phase>package</phase>
+               <goals>
+                   <goal>single</goal>
+               </goals>
+           </execution>
+       </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
