Vytvoren zaklad pro nastroje - abstraktni trida AbstractTool, funkcni DragAndDrop do sceny

--- a/Editor/src/main/resources/editor/Bundle.properties
+++ b/Editor/src/main/resources/editor/Bundle.properties
@@ -1,4 +1,5 @@
 
 MainFrame.tablesSearchField.text=Hledej...
-MainFrame.jPanel2.border.title=Nastroje
 MainFrame.tablesListArea.border.title=Dostupne tabulky
+MainFrame.toolPanel.border.title=Nastroje
+MainFrame.toolPanel.border.title=Nastroje
