--- a/Editor/pom.xml
+++ b/Editor/pom.xml
@@ -46,6 +46,45 @@
       <artifactId>beansbinding</artifactId>
       <version>1.2.1</version>
     </dependency>
+    
+    <!--
+    <dependency>
+	<groupId>log4j</groupId>
+	<artifactId>log4j</artifactId>
+	<version>1.2.16</version>
+    </dependency>
+    
+    <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.0-beta6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.0-beta6</version>
+        </dependency>
+        -->
+        
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.0-rc1</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.0-rc1</version>
+        </dependency>
+
+        <!--
+        <dependency>
+            <groupId>org.fusesource.jansi</groupId>
+            <artifactId>jansi</artifactId>
+            <version>1.11</version>
+        </dependency>
+        -->
   </dependencies>
   
   
@@ -61,7 +100,8 @@
            </descriptorRefs>
            <archive>
                <manifest>
-                   <mainClass>editor.MainFrame</mainClass>
+                   <mainClass>cz.fi.muni.vavmar.editor.SwingDragDrop</mainClass>
+                   <!-- <mainClass>editor.MainFrame</mainClass> -->
                </manifest>
            </archive>
        </configuration>
