--- a/Editor/src/main/resources/cz/fi/muni/vavmar/editor/dialogs/Bundle.properties
+++ b/Editor/src/main/resources/cz/fi/muni/vavmar/editor/dialogs/Bundle.properties
@@ -1,7 +1,7 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-TextDialogPanel.jTextPane1.text=--- AaBbCc ---
-TextDialogPanel.jButton2.text=OK
-TextDialogPanel.jTextField1.text=jTextField1
-TextDialogPanel.jButton1.text=Cancel
+TextDialog.jTextPane1.text=--- AaBbCc ---
+TextDialog.jButton1.text=Cancel
+TextDialog.jTextField1.text=jTextField1
+TextDialog.jButton2.text=OK
