--- a/Editor/src/main/resources/cz/fi/muni/vavmar/editor/dialogs/Bundle.properties
+++ b/Editor/src/main/resources/cz/fi/muni/vavmar/editor/dialogs/Bundle.properties
@@ -2,6 +2,13 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 TextDialog.jTextPane1.text=--- AaBbCc ---
-TextDialog.jButton1.text=Cancel
-TextDialog.jTextField1.text=jTextField1
-TextDialog.jButton2.text=OK
+TextDialog.applyDirectlyCeckBox.text=Apply directly
+TextDialog.fontSizeComboBoxPanel.border.title=Font Size
+TextDialog.fontSelectionPanel.border.title=Font Type
+TextDialog.previewTextField.text=--- AaBbCc ---
+TextDialog.cancelButton.text=Cancel
+TextDialog.okButton.text=OK
+TextDialog.boldCheckBox.text=Bold
+TextDialog.italicCheckBox.text=Italic
+TextDialog.fontSettingsPanel.border.title=Font Settings
+TextDialog.previewPanel.border.title=Preview
