Kompletni dialog nastaveni textu bug pri nastaveni Italic - pismo je orezane

--- a/Editor/src/main/resources/cz/fi/muni/vavmar/editor/dialogs/Bundle.properties
+++ b/Editor/src/main/resources/cz/fi/muni/vavmar/editor/dialogs/Bundle.properties
@@ -8,7 +8,8 @@ TextDialog.fontSelectionPanel.border.title=Font Type
 TextDialog.previewTextField.text=--- AaBbCc ---
 TextDialog.cancelButton.text=Cancel
 TextDialog.okButton.text=OK
-TextDialog.boldCheckBox.text=Bold
-TextDialog.italicCheckBox.text=Italic
 TextDialog.fontSettingsPanel.border.title=Font Settings
 TextDialog.previewPanel.border.title=Preview
+TextDialog.fontBoldCheckBox.text=Bold
+TextDialog.fontItalicCheckBox.text=Italic
+TextDialog.fontSizeComboBox.toolTipText=Select text size or type own value.
