Hromadny vyber - snazani SingleSelectProvidera ( nahrazen v predchozim commitu )

--- a/Editor/src/main/resources/editor/Bundle.properties
+++ b/Editor/src/main/resources/editor/Bundle.properties
@@ -3,4 +3,4 @@ MainFrame.tablesSearchField.text=Hledej...
 MainFrame.tablesListArea.border.title=Dostupne tabulky
 MainFrame.toolPanel.border.title=Nastroje
 MainFrame.toolPanel.border.title=Nastroje
-MainFrame.jButton1.text=jButton1
+MainFrame.jButton1.text=List scene
