Prace s databazi: + napojeni na databazi a implementace zobrazovani v JListech - potreba dodelat vkladani do sceny

--- a/Editor/src/main/resources/cz/fi/muni/vavmar/editor/Bundle.properties
+++ b/Editor/src/main/resources/cz/fi/muni/vavmar/editor/Bundle.properties
@@ -4,3 +4,4 @@ MainFrame.tablesListArea.border.title=Dostupne tabulky
 MainFrame.toolPanel.border.title=Nastroje
 MainFrame.toolPanel.border.title=Nastroje
 MainFrame.jButton1.text=List scene
+MainFrame.title=Report editor
