--- a/Editor/pom.xml
+++ b/Editor/pom.xml
@@ -78,6 +78,12 @@
             <version>2.0-rc1</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.3-1101-jdbc4</version>
+        </dependency>
         <!--
         <dependency>
             <groupId>org.fusesource.jansi</groupId>
@@ -100,7 +106,7 @@
            </descriptorRefs>
            <archive>
                <manifest>
-                   <mainClass>cz.fi.muni.vavmar.editor.experimental.SwingDragDrop</mainClass>
+                   <mainClass>cz.fi.muni.vavmar.editor.MainFrame</mainClass>
                    <!-- <mainClass>editor.MainFrame</mainClass> -->
                </manifest>
            </archive>
@@ -114,7 +120,74 @@
                </goals>
            </execution>
        </executions>
+       <!--dependencies>
+            <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.3-1101-jdbc4</version>
+            
+        </dependency>
+        </dependencies-->
       </plugin>
+      
+      <!--plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+          <descriptorRefs>
+               <descriptorRef>jar-with-dependencies</descriptorRef>
+           </descriptorRefs>
+           <archive>
+               <manifest>
+                   <mainClass>cz.fi.muni.vavmar.editor.MainFrame</mainClass-->
+                   <!-- <mainClass>editor.MainFrame</mainClass> -->
+               <!--/manifest>
+           </archive>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+          </execution>
+        </executions>
+        <dependencies>
+            <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.3-1101-jdbc4</version>
+            
+        </dependency>
+        </dependencies>
+      </plugin>
+      
+         <plugin>
+                <inherited>false</inherited>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.8</version>
+                <executions>
+                    <execution>
+                        <id>copy-db-driver</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.postgresql</groupId>
+                                    <artifactId>postgresql</artifactId>
+                                    <version>9.3-1101-jdbc4</version-->
+                                    <!--outputDirectory>${wildfly.home.parent}/standalone/deployments</outputDirectory-->
+                                <!--/artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+           </plugin-->
     </plugins>
   </build>
 </project>
