predvyplneni Dulog boxu pro zmenu TextTool

--- a/Editor/src/main/resources/cz/fi/muni/vavmar/editor/dialogs/Bundle.properties
+++ b/Editor/src/main/resources/cz/fi/muni/vavmar/editor/dialogs/Bundle.properties
@@ -1,15 +1,16 @@
+
+TextPropertiesDialog.fontSelectionPanel.border.title=Font Type
+TextPropertiesDialog.previewPanel.border.title=Preview
+TextPropertiesDialog.previewTextField.text=--- AaBbCc ---
+TextPropertiesDialog.fontSettingsPanel.border.title=Font Settings
+TextPropertiesDialog.fontBoldCheckBox.text=Bold
+TextPropertiesDialog.fontItalicCheckBox.text=Italic
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-TextDialog.jTextPane1.text=--- AaBbCc ---
-TextDialog.applyDirectlyCeckBox.text=Apply directly
-TextDialog.fontSizeComboBoxPanel.border.title=Font Size
-TextDialog.fontSelectionPanel.border.title=Font Type
-TextDialog.previewTextField.text=--- AaBbCc ---
-TextDialog.cancelButton.text=Cancel
-TextDialog.okButton.text=OK
-TextDialog.fontSettingsPanel.border.title=Font Settings
-TextDialog.previewPanel.border.title=Preview
-TextDialog.fontBoldCheckBox.text=Bold
-TextDialog.fontItalicCheckBox.text=Italic
-TextDialog.fontSizeComboBox.toolTipText=Select text size or type own value.
+TextPropertiesDialog.jTextPane1.text=--- AaBbCc ---
+TextPropertiesDialog.cancelButton.text=Cancel
+TextPropertiesDialog.okButton.text=OK
+TextPropertiesDialog.applyDirectlyCeckBox.text=Apply directly
+TextPropertiesDialog.fontSizeComboBoxPanel.border.title=Font Size
+TextPropertiesDialog.fontSizeComboBox.toolTipText=Select text size or type own value.
