--- a/Editor/pom.xml
+++ b/Editor/pom.xml
@@ -12,6 +12,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <jasperReport.version>5.5.1</jasperReport.version>
+    <dom4j.version>1.6.1</dom4j.version>
   </properties>
 
  <repositories>
@@ -84,6 +86,18 @@
             <artifactId>postgresql</artifactId>
             <version>9.3-1101-jdbc4</version>
         </dependency>
+        
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>${jasperReport.version}</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>${dom4j.version}</version>
+        </dependency>
         <!--
         <dependency>
             <groupId>org.fusesource.jansi</groupId>
@@ -91,6 +105,8 @@
             <version>1.11</version>
         </dependency>
         -->
+        
+        
   </dependencies>
   
   
