--- a/Editor/src/main/resources/cz/fi/muni/vavmar/editor/dialogs/Bundle.properties
+++ b/Editor/src/main/resources/cz/fi/muni/vavmar/editor/dialogs/Bundle.properties
@@ -14,3 +14,15 @@ TextPropertiesDialog.okButton.text=OK
 TextPropertiesDialog.applyDirectlyCeckBox.text=Apply directly
 TextPropertiesDialog.fontSizeComboBoxPanel.border.title=Font Size
 TextPropertiesDialog.fontSizeComboBox.toolTipText=Select text size or type own value.
+TableChooserInitDialog.userTitle.text=User:
+TableChooserInitDialog.roleTitle.text=Role:
+TableChooserInitDialog.userLabel.AccessibleContext.accessibleName=userTitle
+TableChooserInitDialog.userLabel.text=jLabel4
+TableChooserInitDialog.roleLabel.text=userRole
+TableChooserInitDialog.titleLabel.text=Choose table or view to edit:
+TableChooserInitDialog.viewRestrictionCheckbox.text=Views only
+TableChooserInitDialog.searchField.text=Search...
+TableChooserInitDialog.searchField.text=Search...
+TableChooserInitDialog.buttonCancel.text=Cancel
+TableChooserInitDialog.buttonCancel.text=Cancel
+TableChooserInitDialog.buttonOk.text=Ok
