--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,6 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               mylibraries/log4j-api-2.0-rc1.jar,\
+               mylibraries/log4j-core-2.0-rc1.jar
