-dokoncen prevod DataProviderIdempiere na pripojeni do databaze pres iDempiere. -hotove okno pro vyber tabulky

--- a/src/cz/muni/fi/vavmar/printeditor/dialogs/Bundle.properties
+++ b/src/cz/muni/fi/vavmar/printeditor/dialogs/Bundle.properties
@@ -26,3 +26,6 @@ TableChooserInitDialog.searchField.text=Search...
 TableChooserInitDialog.buttonCancel.text=Cancel
 TableChooserInitDialog.buttonCancel.text=Cancel
 TableChooserInitDialog.buttonOk.text=Ok
+TableChooserInitDialog.jLabel1.text=Table:
+TableChooserInitDialog.jLabel2.text=PrintFormat:
+TableChooserInitDialog.createNewPrintFormatButton.text=Create new
