Ukladani - Vytvoreni noveho formatu a ulozeni do DB

--- a/src/cz/muni/fi/vavmar/printeditor/Bundle.properties
+++ b/src/cz/muni/fi/vavmar/printeditor/Bundle.properties
@@ -3,5 +3,5 @@ MainFrame.tablesSearchField.text=Hledej...
 MainFrame.tablesListArea.border.title=Dostupne tabulky
 MainFrame.toolPanel.border.title=Nastroje
 MainFrame.toolPanel.border.title=Nastroje
-MainFrame.jButton1.text=List scene
+MainFrame.jButton1.text=Save
 MainFrame.title=Report editor
