--- a/src/cz/muni/fi/vavmar/printeditor/dialogs/Bundle.properties
+++ b/src/cz/muni/fi/vavmar/printeditor/dialogs/Bundle.properties
@@ -29,3 +29,4 @@ TableChooserInitDialog.buttonOk.text=Ok
 TableChooserInitDialog.jLabel1.text=Table:
 TableChooserInitDialog.jLabel2.text=PrintFormat:
 TableChooserInitDialog.createNewPrintFormatButton.text=Create new
+TableChooserInitDialog.formatsRestrictionCheckBox.text=Formats only
