TableChooserDialog edit - now its possible to search among all available formats and is possible to restric selection only to standard header reports
DataProviderIdempiere edited to support filtering print formats with
standard header (reports in table format)

--- a/src/cz/muni/fi/vavmar/printeditor/dialogs/Bundle.properties
+++ b/src/cz/muni/fi/vavmar/printeditor/dialogs/Bundle.properties
@@ -22,11 +22,16 @@ TableChooserInitDialog.roleLabel.text=userRole
 TableChooserInitDialog.titleLabel.text=Choose table or view to edit:
 TableChooserInitDialog.viewRestrictionCheckbox.text=Views only
 TableChooserInitDialog.searchField.text=Search...
-TableChooserInitDialog.searchField.text=Search...
 TableChooserInitDialog.buttonCancel.text=Cancel
 TableChooserInitDialog.buttonCancel.text=Cancel
 TableChooserInitDialog.buttonOk.text=Ok
 TableChooserInitDialog.jLabel1.text=Table:
 TableChooserInitDialog.jLabel2.text=PrintFormat:
 TableChooserInitDialog.createNewPrintFormatButton.text=Create new
-TableChooserInitDialog.formatsRestrictionCheckBox.text=Formats only
+TableChooserInitDialog.viewRestrictionCheckbox.toolTipText=Shows only Views. Exclude standard tables.
+TableChooserInitDialog.simpleFormatsOnlyCheckBox.toolTipText=Shows only reports which have Standard header (table format).\nReports with Form option enabled (i.e. with customized header and footer) are excluded.
+TableChooserInitDialog.simpleFormatsOnlyCheckBox.text=Simple reports only
+TableChooserInitDialog.searchOnlyReportsCheckBox.toolTipText=Disable searching in tables and searches only in all available reports.
+TableChooserInitDialog.searchOnlyReportsCheckBox.text=Search reports only
+TableChooserInitDialog.searchTableTextField.text=Search table...
+TableChooserInitDialog.searchReportTextField.text=Search report...
