implemented menu bar with save option

--- a/src/cz/muni/fi/vavmar/printeditor/Bundle.properties
+++ b/src/cz/muni/fi/vavmar/printeditor/Bundle.properties
@@ -5,3 +5,7 @@ MainFrame.toolPanel.border.title=Nastroje
 MainFrame.toolPanel.border.title=Nastroje
 MainFrame.jButton1.text=Save
 MainFrame.title=Report editor
+MainFrame.jMenuSave.toolTipText=
+MainFrame.jMenuSave.text=Save
+MainFrame.jMenuPaperSettings.text=Paper settings
+MainFrame.jMenu_Menu.text=Menu
