- edited class PaperSettings to support standard paper formats using code defined in ?javax.print.Attributes.MediaSize? - edited MainScene to properly react on paper change - edited DataProviderImpl to retrieve all paper settings from iDempiere

--- a/src/cz/muni/fi/vavmar/printeditor/dialogs/Bundle.properties
+++ b/src/cz/muni/fi/vavmar/printeditor/dialogs/Bundle.properties
@@ -35,3 +35,9 @@ TableChooserInitDialog.searchOnlyReportsCheckBox.toolTipText=Disable searching i
 TableChooserInitDialog.searchOnlyReportsCheckBox.text=Search reports only
 TableChooserInitDialog.searchTableTextField.text=Search table...
 TableChooserInitDialog.searchReportTextField.text=Search report...
+PaperSettingsDialog.paperWidthTextField.text=
+PaperSettingsDialog.paperHeightLabel.text=Height:
+PaperSettingsDialog.paperWidthLabel.text=Width:
+PaperSettingsDialog.paperHeightTextField.text=
+PaperSettingsDialog.paperDescriptionTextField.text=
+PaperSettingsDialog.paperDescriptionLabel.text=Description:
