- created dialog for selecting Page setings from iDempiere - fixed bug in refresching AreaWidgets after paper change

--- a/src/cz/muni/fi/vavmar/printeditor/dialogs/Bundle.properties
+++ b/src/cz/muni/fi/vavmar/printeditor/dialogs/Bundle.properties
@@ -35,9 +35,27 @@ TableChooserInitDialog.searchOnlyReportsCheckBox.toolTipText=Disable searching i
 TableChooserInitDialog.searchOnlyReportsCheckBox.text=Search reports only
 TableChooserInitDialog.searchTableTextField.text=Search table...
 TableChooserInitDialog.searchReportTextField.text=Search report...
-PaperSettingsDialog.paperWidthTextField.text=
-PaperSettingsDialog.paperHeightLabel.text=Height:
+PaperSettingsDialog.leftMarginLabel.text=Left:
+PaperSettingsDialog.marginsLabel.text=Margins:
+PaperSettingsDialog.rightMarginLabel.text=Right:
+PaperSettingsDialog.bottomMarginLabel.text=Bottom:
+PaperSettingsDialog.topMarginLabel.text=Top:
+PaperSettingsDialog.rightMarginTextField.text=
+PaperSettingsDialog.leftMarginTextField.text=
+PaperSettingsDialog.topMarginTextField.text=
+PaperSettingsDialog.bottomMarginTextField.text=
+PaperSettingsDialog.jLabel1.text=1/72"
+PaperSettingsDialog.jLabel2.text=1/72"
+PaperSettingsDialog.jLabel3.text=1/72"
+PaperSettingsDialog.jLabel4.text=1/72"
+PaperSettingsDialog.jLabel5.text=mm
+PaperSettingsDialog.jLabel6.text=mm
+PaperSettingsDialog.cancelButton.text=Cancel
+PaperSettingsDialog.okButton.text=Ok
+PaperSettingsDialog.widthTextField.text=
+PaperSettingsDialog.heightTextField.text=
+PaperSettingsDialog.heightLabel.text=Height:
 PaperSettingsDialog.paperWidthLabel.text=Width:
-PaperSettingsDialog.paperHeightTextField.text=
-PaperSettingsDialog.paperDescriptionTextField.text=
-PaperSettingsDialog.paperDescriptionLabel.text=Description:
+PaperSettingsDialog.landscapeCheckBox.text=Landscape
+PaperSettingsDialog.descriptionTextField.text=
+PaperSettingsDialog.descriptionLabel.text=Description:
