implemented class IdempiereLauncherProcess for creating process and item in menu to launch editor from menu removed SampleShape

--- a/build.properties
+++ b/build.properties
@@ -6,4 +6,5 @@ bin.includes = META-INF/,\
                mylibraries/log4j-core-2.0-rc1.jar,\
                mylibraries/org-netbeans-api-visual.jar,\
                mylibraries/org-openide-util.jar,\
-               mylibraries/postgresql-9.3-1101-jdbc4.jar
+               mylibraries/postgresql-9.3-1101-jdbc4.jar,\
+               plugin.xml
