--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PrintEditor</name>
+	<name>cz.muni.fi.vavmar.reporteditor</name>
 	<comment></comment>
 	<projects>
 	</projects>
