--- a/plugin.xml
+++ b/plugin.xml
@@ -2,11 +2,11 @@
 <?eclipse version="3.4"?>
 <plugin>
    <extension
-         id="cz.muni.fi.vavmar.printeditor.IdempiereLauncherProcess"
-         name="cz.muni.fi.vavmar.printeditor.IdempiereLauncherProcess"
+         id="cz.muni.fi.vavmar.reporteditor.IdempiereLauncherProcess"
+         name="cz.muni.fi.vavmar.reporteditor.IdempiereLauncherProcess"
          point="org.adempiere.base.Process">
       <process
-            class="cz.muni.fi.vavmar.printeditor.IdempiereLauncherProcess">
+            class="cz.muni.fi.vavmar.reporteditor.IdempiereLauncherProcess">
       </process>
    </extension>
 
